[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Beacons/Beacon.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 0 )
emission_enabled = true
emission = Color( 1, 0.101653, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CylinderMesh" id=2]
material = SubResource( 1 )
top_radius = 4.2204
bottom_radius = 4.2204
height = 15.0

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:mesh:material:emission")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.521569, 0, 1 ), Color( 1, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:mesh:top_radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 5.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:mesh:bottom_radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 5.0 ]
}

[sub_resource type="CylinderShape" id=4]
radius = 3.80603
height = 15.0

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:shape:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 5.0 ]
}

[node name="Beacon" type="Area" groups=[
"Beacons",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="BeaconMesh" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="AnimationPlayer2" type="AnimationPlayer" parent="BeaconMesh"]
anims/PulseBeacon = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CollisionShape"]
anims/PulseBeacon = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 31.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Beacon_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
